--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head> </head>
+	<head>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+		/>
+	</head>
 	<body></body>
 </html>
